--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="css/two.min.css">
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
     <!-- <link rel="stylesheet" href="css/jqm-demos.css"> -->
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova_plugins.js"></script>
     <script type="text/javascript" charset="utf-8">
         document.addEventListener("deviceready", onDeviceReady, false);
 
