--- a/kamus.html
+++ b/kamus.html
@@ -13,6 +13,10 @@
     <!-- <link rel="stylesheet" type="text/css" href="css/one.min.css"> -->
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
     <!-- <link rel="stylesheet" href="css/jqm-demos.css"> -->
+
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova_plugins.js"></script>
+
     <link media="screen" rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="movies/css/idangerous.swiper.css">
     <link rel="stylesheet" href="movies/css/movies-app.css">
