--- a/kamus.html
+++ b/kamus.html
@@ -16,7 +16,7 @@
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="cordova_plugins.js"></script>
-
+    <script type="text/javascript" src="phonegap.js"></script>
     <link media="screen" rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="movies/css/idangerous.swiper.css">
     <link rel="stylesheet" href="movies/css/movies-app.css">
