--- a/kamus.html
+++ b/kamus.html
@@ -106,7 +106,7 @@
                                     <figure>
                                         <img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/warna/2/abu-abu.mp3')">
                                         <figcaption style="font-weight:bold;">Abu-abu</figcaption>
-                                        <button  onclick="playAudio('/android_asset/www/audio/warna/2/abu-abu.mp3')">test</button>
+                                        <button  onclick="playAudio('file:///android_asset/www/audio/warna/2/abu-abu.mp3')">test</button>
                                     </figure>
                                 </div>
                                 <div class="ui-block-b">
