--- a/kamus.html
+++ b/kamus.html
@@ -51,8 +51,8 @@ function playAudio(src) {
     }
   };
 
-  // var audioUrl = src;/
-  var audioUrl = 'http://www.vorbis.com/music/Epoq-Lepidoptera.ogg';
+  var audioUrl = src;
+  // var audioUrl = 'http://www.vorbis.com/music/Epoq-Lepidoptera.ogg';
     window.plugins.streamingMedia.playAudio(audioUrl, options);
 }
 
@@ -111,6 +111,10 @@ function playAudio(src) {
                                     <figure>
                                         <img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/warna/2/abu-abu.mp3')">
                                         <figcaption style="font-weight:bold;">Abu-abu</figcaption>
+
+
+                                        <button  onclick="playAudio('file:///android_asset/www/audio/warna/2/abu-abu.mp3')">test</button>
+                                        <button  onclick="playAudio()">test 2</button>
 
                                     </figure>
                                 </div>
