--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h4 style="white-space: normal"><img src="images/dictionary.png" width="20px" alt="US Flag" /> Kamus</h4>
                 <ul data-role="listview">
                     <li>
-                        <a href="kamus.html" data-ajax="false">Warna</a>
+                        <a href="kamus.html" data-ajax="false">Warna1</a>
                     </li>
                     <li>
                         <a href="kamus2.html" data-ajax="false">
