--- a/kamus.html
+++ b/kamus.html
@@ -13,7 +13,6 @@
     <!-- <link rel="stylesheet" type="text/css" href="css/one.min.css"> -->
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
     <!-- <link rel="stylesheet" href="css/jqm-demos.css"> -->
-
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="cordova_plugins.js"></script>
     <script type="text/javascript" src="phonegap.js"></script>
@@ -21,57 +20,42 @@
     <link rel="stylesheet" href="movies/css/idangerous.swiper.css">
     <link rel="stylesheet" href="movies/css/movies-app.css">
     <script type="text/javascript" charset="utf-8">
-        document.addEventListener("deviceready", onDeviceReady, false);
-
-        function onDeviceReady() {
-        }
-
-        document.addEventListener("deviceready", onDeviceReady, false);
-
-
-
-
-function playAudio(src) {
-  var options = {
-    bgColor: "#FFFFFF",
-    bgImage: "<SWEET_BACKGROUND_IMAGE>",
-    bgImageScale: "fit",
-    initFullscreen: false,
-    successCallback: function() {
-      console.log("Player closed without error.");
-    },
-    errorCallback: function(errMsg) {
-      console.log("Error! " + errMsg);
-    }
-  };
-  // var audioUrl = src;
-  var audioUrl = '';
-    // window.plugins.streamingMedia.playAudio(audioUrl, options);
-
-    var audio = new Media( src, null, media_error );
-  audio.play();
-}
-
-
-
-
-
-        function doClose() {
-            navigator.notification.confirm(
-                'Keluar dari Aplikasi?',
-                exitApp,
-                'Kamus Jerman Indo',
-                'Ok,Cancel'
-            );
-        }
-
-        function exitApp(buttonIndex) {
-            if (buttonIndex == 1) {
-                navigator.app.exitApp();
-            } else {
-                window.close();
+    document.addEventListener("deviceready", onDeviceReady, false);
+    function onDeviceReady() {}
+    function playAudio(src) {
+        // Play an audio file with options (all options optional)
+        var options = {
+            bgColor: "#FFFFFF",
+            bgImage: "",
+            bgImageScale: "fit", // other valid values: "stretch"
+            initFullscreen: false, // true(default)/false iOS only
+            successCallback: function() {
+                console.log("Player closed without error.");
+            },
+            errorCallback: function(errMsg) {
+                console.log("Error! " + errMsg);
             }
+        };
+        window.plugins.streamingMedia.playAudio(src, options);
+    }
+
+
+    function doClose() {
+        navigator.notification.confirm(
+            'Keluar dari Aplikasi?',
+            exitApp,
+            'Kamus Jerman Indo',
+            'Ok,Cancel'
+        );
+    }
+
+    function exitApp(buttonIndex) {
+        if (buttonIndex == 1) {
+            navigator.app.exitApp();
+        } else {
+            window.close();
         }
+    }
     </script>
     <style>
     .ui-grid-a{
