--- a/kamus.html
+++ b/kamus.html
@@ -86,13 +86,10 @@
 									<figure>
 										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/warna/2/abu-abu.mp3')">
 										<figcaption style="font-weight:bold;">Abu-abu</figcaption>
-										<button  onclick="playAudio('file:///android_asset/www/audio/warna/2/abu-abu.mp3')">test</button>
-										<button  onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1sc6gCQBq9W.mp3')">test 2</button>
-									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/grau.mp3')">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1D5IlB6FXxX.mp3')">
 										<figcaption style="font-weight:bold;">Grau</figcaption>
 									</figure>
 								</div>
@@ -114,7 +111,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/blau.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1oiAWCFa4Ur.mp3');">
 										<figcaption style="font-weight:bold;">Blau</figcaption>
 									</figure>
 								</div>
@@ -136,7 +133,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/grun.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s19EWNPbfAmj.mp3');">
 										<figcaption style="font-weight:bold;">Grun</figcaption>
 									</figure>
 								</div>
@@ -158,7 +155,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/schwarz.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1iXoUU4WGjV.mp3');">
 										<figcaption style="font-weight:bold;">Schwartz</figcaption>
 									</figure>
 								</div>
@@ -180,7 +177,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/rosa.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s170wrb9uoG9.mp3');">
 										<figcaption style="font-weight:bold;">Rosa</figcaption>
 									</figure>
 								</div>
@@ -202,7 +199,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/rot.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1eFEbEAmqeR.mp3');">
 										<figcaption style="font-weight:bold;">Rot</figcaption>
 									</figure>
 								</div>
@@ -224,7 +221,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/braun.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1LEiCsHDjLd.mp3');">
 										<figcaption style="font-weight:bold;">Braun</figcaption>
 									</figure>
 								</div>
@@ -246,7 +243,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/rot.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1d7s9JUW4cu.mp3');">
 										<figcaption style="font-weight:bold;">Lila</figcaption>
 									</figure>
 								</div>
@@ -268,7 +265,7 @@
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/warna/1/lila.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s19hY9ez1hVJ.mp3');">
 										<figcaption style="font-weight:bold;">Gelb</figcaption>
 									</figure>
 								</div>
