--- a/kamus4.html
+++ b/kamus4.html
@@ -239,7 +239,7 @@
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/acht.mp3');">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s03Qp8Y4vxpm.mp3">
   										<figcaption style="font-weight:bold;">Acht</figcaption>
   									</figure>
   								</div>
